--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 </head>
 <body>
   <div id='app'>
+    <div id='hello'></div>
+    <div id='todo'></div>
   </div>
   <script src="build.js"></script>
 </body>
